...
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <inset key="imageEdgeInsets" minX="7" minY="0.0" maxX="0.0" maxY="0.0"/>
                                <state key="normal" title="Log Out" image="chevron.left.circle.fill" catalog="system">
                                    <color key="titleColor" systemColor="linkColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
...
                                <rect key="frame" x="320" y="6" width="74" height="32"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" label="Search Icon"/>
                                <inset key="imageEdgeInsets" minX="35" minY="0.0" maxX="0.0" maxY="0.0"/>
                                <state key="normal" image="magnifyingglass" catalog="system">
...
                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="infoLight" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ojV-4R-tep">
                                            <rect key="frame" x="359" y="38" width="25" height="24"/>
                                            <accessibility key="accessibilityConfiguration" label="Information Icon"/>
                                            <connections>
                                                <action selector="showInfo:" destination="UYi-56-7hV" eventType="touchUpInside" id="DBQ-Nq-pe9"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ukk-Vj-gK6">
                                <rect key="frame" x="129" y="291.5" width="156" height="75"/>
                                <accessibility key="accessibilityConfiguration" label="Privacy Information"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="75" id="4Xx-9u-ARK"/>
...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ire-4L-4D5">
                                <rect key="frame" x="40" y="137.5" width="364" height="0.0"/>
                                <accessibility key="accessibilityConfiguration" label="Name Label"/>
                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                <nil key="textColor"/>
...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aGQ-3i-uzL">
                                <rect key="frame" x="40" y="177" width="359" height="25"/>
                                <accessibility key="accessibilityConfiguration" label="Description Label"/>
                                <constraints>
                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="25" id="XFj-qB-OMY"/>
...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RER-RL-b9u">
                                <rect key="frame" x="40" y="241.5" width="359" height="0.0"/>
                                <accessibility key="accessibilityConfiguration" label="Members Label"/>
                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                <nil key="textColor"/>
...
            <objects>
                <navigationController title="SupportGroupNavigationController" automaticallyAdjustsScrollViewInsets="NO" id="Ml0-kQ-FII" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Support Groups" image="person.3.fill" catalog="system" id="D7c-is-VZg"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="TAH-0L-5Sp">
...
            <objects>
                <navigationController title="ProfileNavigationVC" automaticallyAdjustsScrollViewInsets="NO" id="XEr-Ex-JO7" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Profile" image="person.fill" catalog="system" id="nxc-L4-vCV"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="zfa-U6-I7d">
...
                    </view>
                    <navigationItem key="navigationItem" largeTitleDisplayMode="never" id="Ntu-NM-gzM">
                        <barButtonItem key="rightBarButtonItem" title="Info Button" image="info.circle" catalog="system" style="plain" id="5E5-7q-Xah">
                            <connections>
                                <action selector="onClick:" destination="qrY-CR-dFM" id="eXg-qz-5IQ"/>
...
                                <rect key="frame" x="29" y="75" width="348" height="238"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" label="Privacy Info Label"/>
                                <string key="text">A support group is a tool to help people with similar health experiences convene. Please do not share any personal health information in a support group.</string>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
