...
                                    <constraint firstAttribute="width" constant="175" id="7Bg-Uz-CvC"/>
                                    <constraint firstAttribute="width" secondItem="5cJ-SM-70O" secondAttribute="height" multiplier="1:1" id="DHT-eD-oha"/>
                                </constraints>
                            </imageView>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="g5d-gX-faI" customClass="CustomTextField" customModule="DoctorsNote" customModuleProvider="target">
                                <rect key="frame" x="25" y="490.5" width="364" height="55"/>
                                <accessibility key="accessibilityConfiguration" label="Password Field"/>
                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                <textInputTraits key="textInputTraits" enablesReturnKeyAutomatically="YES" secureTextEntry="YES" textContentType="password"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="1Dn-C0-pE7" customClass="CustomTextField" customModule="DoctorsNote" customModuleProvider="target">
                                <rect key="frame" x="25" y="420.5" width="364" height="55"/>
                                <accessibility key="accessibilityConfiguration" label="Email Field"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="55" id="FrM-yQ-Zyr"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                <textInputTraits key="textInputTraits" autocorrectionType="no" smartDashesType="no" textContentType="email"/>
                            </textField>
...
                                <connections>
                                    <segue destination="lYU-Iz-wH8" kind="show" id="ykm-CF-tH9"/>
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Don't have an account?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kst-sh-c5u">
                                <rect key="frame" x="117.5" y="767" width="179" height="21"/>
                                <accessibility key="accessibilityConfiguration" identifier="Account Label" label="Account Label"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vnd-qm-QB0">
                                <rect key="frame" x="107" y="605.5" width="200" height="40"/>
                                <color key="backgroundColor" systemColor="linkColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" label="Log In"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="200" id="IXM-rO-dxc"/>
                                    <constraint firstAttribute="height" constant="40" id="fnU-Aw-Sb5"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="16"/>
                                <state key="normal" title="Login">
...
